# runtime-prediction

./: .gitignore  README.md
src/: CMakeLists.txt  build.sh  prediction_pass.cc  run.sh  vars.sh
src/test_progs/: permutation.c
src/test_progs/fib/: code_size.yaml  compile_time.yaml  fib.bc  program.bc  program_o.bc
src/wu_larus/A1.Branch_prediction/: branch_heuristics_info.cc  branch_prediction_info.cc  branch_prediction_pass.cc
src/wu_larus/A2.Block_edge_frequency/: block_edge_frequency_pass.cc
src/wu_larus/A3.Function_call_frequency/: function_call_frequency_pass.cc
